@@ -1,4 +1,4 @@
-/* Copyright (C) 1993, 1997, 1998, 1999, 2000 Free Software Foundation, Inc.
+/* Copyright (C) 1993, 1997-2000, 2001 Free Software Foundation, Inc.
    This file is part of the GNU C Library.
 
    The GNU C Library is free software; you can redistribute it and/or
@@ -35,15 +35,12 @@ _IO_vsprintf (string, format, args)
      _IO_va_list args;
 {
   _IO_strfile sf;
-#ifdef _IO_MTSAFE_IO
-  _IO_lock_t lock;
-#endif
   int ret;
 
 #ifdef _IO_MTSAFE_IO
-  sf._sbf._f._lock = &lock;
+  sf._sbf._f._lock = NULL;
 #endif
-  _IO_no_init (&sf._sbf._f, 0, -1, NULL, NULL);
+  _IO_no_init (&sf._sbf._f, _IO_USER_LOCK, -1, NULL, NULL);
   _IO_JUMPS ((struct _IO_FILE_plus *) &sf._sbf) = &_IO_str_jumps;
   _IO_str_init_static (&sf, string, -1, string);
   ret = _IO_vfprintf ((_IO_FILE *) &sf._sbf, format, args);
