@@ -108,11 +108,6 @@ _IO_str_init_static (sf, ptr, size, pstart)
     }
   /* A null _allocate_buffer function flags the strfile as being static. */
   sf->_s._allocate_buffer = (_IO_alloc_type) 0;
-
-#ifdef _IO_MTSAFE_IO
-  /* We never have to lock this stream.  */
-  __fsetlocking ((FILE *) fp, FSETLOCKING_BYCALLER);
-#endif
 }
 
 void
